fix overflow

--- a/style1.css
+++ b/style1.css
@@ -8,7 +8,6 @@ html {
 body {
   color: #FFFFFF;
   font-family: 'Kosugi Maru', sans-serif;
-  overflow-y: hidden;
 }
 
 #header {
