--- a/style2.css
+++ b/style2.css
@@ -9,7 +9,6 @@ body {
   color: #FFFFFF;
   background-color: #BBDEFB;
   font-family: 'Kosugi Maru', sans-serif;
-  overflow-y: hidden;
 }
 
 #header {
